[package]
name = "olive"
version = "0.1.0"
authors = ["Jay Nagpaul <jaynagpaul@gmail.com>"]
edition = "2018"
license = "MIT"
description = "WASM Framework"

[dependencies]
askama_escape = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.38"


[workspace]
members = ["olive-macros"]

# TODO: Conditional features for including the dom and server code. Enabled by default