[package]
name = "olive"
version = "0.1.0"
authors = ["Jay Nagpaul <jaynagpaul@gmail.com>"]
edition = "2018"
license = "MIT"
description = "WASM Framework"

[dependencies]
askama_escape = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.38"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.15"
features = ["Node"]

[workspace]
members = ["olive-macros", "rsx"]

# TODO: Conditional features for including the dom and server code. Enabled by default